Make board game height auto to avoid squishing

--- a/src/Party/pages/Party.css
+++ b/src/Party/pages/Party.css
@@ -165,7 +165,7 @@
 }
 
 .board-img {
-    height: 32vh;
+    height: auto;
     width: 100%;
     grid-column: 1/4;
     display: grid;
