--- a/src/collection/pages/Collection.css
+++ b/src/collection/pages/Collection.css
@@ -88,7 +88,7 @@ svg.svg-inline--fa.fa-arrow-down-a-z.fa-xl {
 }
 
 .board-img {
-    height: 32vh;
+    height: auto;
     width: 100%;
     grid-column: 1/4;
     display: grid;
